--- a/part 1/1.6/1.6.md
+++ b/part 1/1.6/1.6.md
@@ -1,5 +1,5 @@
 ```
 docker build -t backend .
-docker run -p 8000:8000 backend
+docker run -v ${pwd}/logs.txt:/usr/src/app/logs.txt -p 8000:8000 backend
 
 ```
